--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Study Club</title>
+    <title>Critical Hit</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   </head>
 
@@ -27,7 +27,7 @@
     </div>
 
     <!-- form.123formbuilder.com script begins here -->
-    <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6046783.js" 
+    <script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6047958.js" 
     data-role="form" data-default-width="650px"></script>
     <!-- form.123formbuilder.com script ends here -->
 
