added join button to navbar

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <div id="topnav">
 
     <a href="index.html" target="_self">Home</a>
+    <a href="https://discord.gg/9ptD2dr3Yr">Join</a>
     <a href="officers.html" target="_self">Officers</a>
     <a class="active" href="contact.html" target="_self">Contact</a>
 
