--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <div id="topnav">
     
     <a class="active" href="#home">Home</a>
+    <a href="https://discord.gg/9ptD2dr3Yr">Join</a>
     <a href="officers.html">Officers</a>
     <a href="contact.html">Contact</a>
     
