added instructions as to how to join

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           
         <p class="content_text">Embark on your adventure in Critical Hit! Meet other students interested
           in roleplaying games such as Dungeons and Dragons and Pathfinder, and join or create your
-          own campaign.</p>
+          own campaign. To join, click "Join" at the top left.</p>
         
       </div>
 
