--- a/officers.html
+++ b/officers.html
@@ -7,14 +7,14 @@
     <a class="active" href="officers.html" target="_self">Officers</a>
     <a href="contact.html" target="_self">Contact</a>
   
-    <p class="logo_text right">Study Club</p>
+    <p class="logo_text right">Critical Hit</p>
     <img class="logo_img right" src="favicon.ico">
   
   </div>
 
   <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Critical Hit</title>
+    <title>Critical Hit - Officers</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   </head>
 
