--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Critical Hit</title>
+    <title>Critical Hit - Home</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   </head>
 
